--- a/final-project-fe/Pages/Mentor/MentorPage/Index.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/Index.cshtml
@@ -540,7 +540,7 @@
 <div class="theme-layout">
     <!-- Top Banner -->
      <section>
-            <div style="background-color: #111827" class="ext-gap high-opacity">
+            <div style="background: linear-gradient(135deg, #000000 0%, #474646 100%);" class="ext-gap high-opacity">
             <div class="content-bg-wrap"></div>
             <div class="container-fluid">
                 <div class="row">
