--- a/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
@@ -16,7 +16,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <a href="/Mentor/MentorPage/MyCourses" class="btn btn-outline-light btn-sm">
-                                        <i class="fa fa-arrow-left"></i> Back to courses
+                                        <i class="fa fa-arrow-left"></i> Back to My Courses
                                     </a>
                                 </div>
                                 <div class="d-flex align-items-center">
