--- a/final-project-fe/Pages/Register.cshtml
+++ b/final-project-fe/Pages/Register.cshtml
@@ -13,8 +13,7 @@
     <meta name="description" content="Register to Winku" />
     <meta name="keywords" content="social network, register, signup" />
     <title>Register - Register</title>
-    <link rel="icon" href="~/images/fav.png" type="image/png" sizes="16x16">
-
+    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
     <link rel="stylesheet" href="~/css/main.min.css">
     <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="~/css/color.css">
