--- a/final-project-fe/Pages/WorkshopDetail.cshtml
+++ b/final-project-fe/Pages/WorkshopDetail.cshtml
@@ -177,7 +177,7 @@
                             <div class="mb-4">
                                 <label class="form-label fw-semibold text-dark">
                                     <i class="bi bi-card-text me-2 text-primary"></i>
-                                    Mô tả Workshop
+                                    Workshop description
                                 </label>
                                 <input asp-for="Workshop.Decription"
                                        class="form-control form-control-lg border-2 rounded-3"
